# assistant-sdk

./: .gitignore  .pre-commit-config.yaml  README.md
.github/workflows/: ci-anaconda-assistant-conda.yml  ci-anaconda-assistant-mcp.yml  ci-anaconda-assistant-sdk.yml  docs.yml
docs/: environment.yml
docs/source/: conda.md  conf.py  index.md  sdk.md
libs/anaconda-assistant-conda/: README.md  activate-demo.sh  conda create -n myenv --dry-run anaconda-cloud-auth=0.7 pydantic=1  deactivate-demo.sh  environment-dev.yml  pyproject.toml  setup.py  test.sh  tox.ini
libs/anaconda-assistant-conda/conda.recipe/: meta.yaml
libs/anaconda-assistant-conda/src/anaconda_assistant_conda/: ansi_theme.py  atty.py  cli.py  config.py  core.py  custom_theme.py  debug_config.py  exceptions.py  get_clean_error_report_command.py  md.py  no_padding_code_block.py  plugin.py  prompt_accept_terms.py  prompt_debug_config.py  show_progress.py
libs/anaconda-assistant-conda/src/anaconda_assistant_conda/mcp/: __init__.py  __main__.py  catalog.py  cli.py  command_router.py  config.py  config_resolver.py  core_service.py  environment.py  execution_context.py  executor.py  feedback.py  models.py  service.py  settings.py
libs/anaconda-assistant-conda/src/anaconda_assistant_conda/mcp/client/: __init__.py  client.py  discovery.py  exceptions.py
libs/anaconda-assistant-conda/src/anaconda_assistant_conda/mcp/core/: exceptions.py  service.py
libs/anaconda-assistant-conda/src/anaconda_assistant_conda/mcp/modules/: catalog.py  conda_utils.py  environment.py  installer.py
libs/anaconda-assistant-conda/src/anaconda_assistant_conda/mcp/services/: __init__.py  catalog.py  environment.py  (+2 more)
libs/anaconda-assistant-conda/src/anaconda_assistant_conda/rich_customizations/: ansi_syntax_theme.py  md.py  test_md.py
libs/anaconda-assistant-conda/tests/: conftest.py  test_chat_functionality.py  test_cli.py  test_config.py  test_core.py  test_plugin.py
libs/anaconda-assistant-mcp/: README.md  environment-dev.yml  pyproject.toml
libs/anaconda-assistant-mcp/conda.recipe/: meta.yaml
libs/anaconda-assistant-mcp/src/anaconda_assistant_conda/: cli.py
libs/anaconda-assistant-mcp/src/anaconda_assistant_mcp/: cli.py  conda-list.txt  plugin.py  server.py  server_experiments.py
libs/anaconda-assistant-mcp/src/anaconda_assistant_mcp/experiments/: list_env_info.py  server_experiments.py
libs/anaconda-assistant-mcp/src/anaconda_assistant_mcp/tools_core/: create_environment.py  environment_details.py  list_environment.py  shared.py  update_environment.py
libs/anaconda-assistant-mcp/tests/: test.py  test_cli.py  test_core.py  test_create_environment.py  test_dummy.py  test_functions.py  test_integration.py  test_mcp.py  test_remove_environment.py  test_server.py  test_shared.py  test_update_environment.py
libs/anaconda-assistant-sdk/: README.md  environment-dev.yml  pyproject.toml
libs/anaconda-assistant-sdk/conda.recipe/: meta.yaml
libs/anaconda-assistant-sdk/src/anaconda_assistant/: api_client.py  config.py  core.py  exceptions.py
libs/anaconda-assistant-sdk/src/anaconda_assistant/integrations/: ell.py  langchain.py  llm.py  pandasai.py
libs/anaconda-assistant-sdk/tests/: test_core.py
libs/anaconda-assistant-wat/src/anaconda_assistant_conda/: core.py
(+16 files in other folders)
